# opengl-sandbox

./: .gitmodules  CMakeLists.txt  index_buffer.cpp  index_buffer.h  opengl-sandbox.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
res/shaders/: basic.glsl
sources/application/: CMakeLists.txt  opengl-sandbox.cpp
sources/debuger/: CMakeLists.txt  debuger.h
sources/renderer_core/: CMakeLists.txt  index_buffer.h  renderer.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
sources/shader_compiler/: CMakeLists.txt  shader.h
sources/texture_compiler/: CMakeLists.txt  texture.h
